--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,8 @@
 	<meta name="twitter:title" content="お問い合わせ｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="SNSプロデュース・PR支援・ブランド制作のご相談はこちらから。">
 	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 	<!-- 構造化データ Organization -->
 	<script type="application/ld+json">
@@ -82,15 +84,15 @@
 				<img src="img/reiwachan.png" alt="Logo" class="header-logo">
 			</a>
 			<div class="site-header-msg">
-				<h2>SNSを通じて、人々の便利を作る</h2>
+				<h2>SNSを通じて、<br class="mobile-break">人々の便利を作る</h2>
 			</div>
 		</div>
 		<nav class="header-nav">
-			<a href="service.html">Service</a>
-			<a href="company.html">Company</a>
-			<a href="top.html">Vision</a>
-			<a href="recruit.html">Recruit</a>
-			<a href="contact.html">Contact</a>
+			<a href="service.html" class="transition-link">Service</a>
+			<a href="company.html" class="transition-link">Company</a>
+			<a href="top.html" class="transition-link">Vision</a>
+			<a href="recruit.html" class="transition-link">Recruit</a>
+			<a href="contact.html" class="transition-link">Contact</a>
 		</nav>
 	</header>
 
@@ -103,11 +105,11 @@
 
 	<div class="mobile-menu-overlay" id="mobileMenuOverlay">
 		<nav class="mobile-menu-nav">
-			<a href="service.html">Service</a>
-			<a href="company.html">Company</a>
-			<a href="top.html">Vision</a>
-			<a href="recruit.html">Recruit</a>
-			<a href="contact.html">Contact</a>
+			<a href="service.html" class="transition-link">Service</a>
+			<a href="company.html" class="transition-link">Company</a>
+			<a href="top.html" class="transition-link">Vision</a>
+			<a href="recruit.html" class="transition-link">Recruit</a>
+			<a href="contact.html" class="transition-link">Contact</a>
 		</nav>
 	</div>
 
@@ -216,13 +218,13 @@
 
 			<div class="footer-top-row">
 				<div class="footer-tags">
-					<a href="company.html">COMPANY</a>
-					<a href="service.html">SERVICE</a>
-					<a href="top.html">VISION</a>
-					<a href="recruit.html">RECRUIT</a>
+					<a href="company.html" class="transition-link">COMPANY</a>
+					<a href="service.html" class="transition-link">SERVICE</a>
+					<a href="top.html" class="transition-link">VISION</a>
+					<a href="recruit.html" class="transition-link">RECRUIT</a>
 				</div>
 				<div class="footer-contact">
-					<a href="contact.html" class="footer-contact-button">CONTACT</a>
+					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>
 				</div>
 			</div>
 
@@ -253,8 +255,8 @@
 
 			<div class="footer-bottom-area theme-dark">
 				<div class="footer-nav">
-					<a href="index.html">Top</a>
-					<a href="contact.html">Contact</a>
+					<a href="index.html" class="transition-link">Top</a>
+					<a href="contact.html" class="transition-link">Contact</a>
 					<a href="https://page.line.me/fhy3551i?openQrModal=true">Line</a>
 					<a href="https://www.instagram.com/reiwa_girls_official_/">Instagram</a>
 				</div>
@@ -265,10 +267,20 @@
 
 		</div>
 	</footer>
-
-	<!-- ページの最後、</body>の直前に入れるのがベスト -->
-	<div class="page-entry-mask" id="pageEntryMask"></div>
-	<div class="page-exit-mask" id="pageExitMask"></div>
+	
+	<!-- 画面トランジション背景（10分割） -->
+	<div class="page-transition-bg">
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	  <div class="bg-content"></div>
+	</div>
 
 	<script src="js/header-mobile.js"></script>
 
