サービスページの画像・デザイン修正（2025/06/22）

--- a/service.html
+++ b/service.html
@@ -283,8 +283,8 @@
 					<hr>
 
 
-					<h3>提供サービス・料金プラン</h3>
-					<img src="img/.png" alt="インフルエンサー実績" class="modal-influencehub-image">
+					<!--					<h3>提供サービス・料金プラン</h3>-->
+					<img src="img/hub_price.jpg" alt="インフルエンサー実績" class="modal-influencehub-image">
 
 					<ul>
 						<li>インフルエンサーキャスティング</li>
@@ -298,16 +298,29 @@
 
 					<h3>お問い合わせ・詳細</h3>
 
-					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
-							target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+					<p>
+						<a href="https://page.line.me/fhy3551i?openQrModal=true"
+							class="service__button service__button--line" target="_blank">
+							公式LINE＠はこちら
+						</a>
+					</p>
+
 					<h3>株式会社令和ガールズ 概要</h3>
 
-					<ul>
-						<li>公式Instagram：<a
-								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
-								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
-								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a>
+					<ul class="service__link-list">
+						<li class="service__link-item">
+							<img src="img_logo/instagram_logo.png" alt="Instagramロゴ" class="service__icon" />
+							<a href="https://www.instagram.com/reiwa_girls_official/"
+								class="service__link service__link--insta" target="_blank">
+								公式Instagramはこちら
+							</a>
+						</li>
+						<li class="service__link-item">
+							<img src="img_logo/line_logo.png" alt="LINEロゴ" class="service__icon" />
+							<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								class="service__link service__link--line" target="_blank">
+								公式LINEはこちら
+							</a>
 						</li>
 					</ul>
 
@@ -373,18 +386,29 @@
 					<hr>
 
 					<h3>お問い合わせ・詳細</h3>
-					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
-							target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+					<p>
+						<a href="https://page.line.me/fhy3551i?openQrModal=true"
+							class="service__button service__button--line" target="_blank">
+							公式LINE＠はこちら
+						</a>
+					</p>
 
 					<h3>株式会社令和ガールズ 概要</h3>
-					<ul>
-						<li>公式Instagram：<a
-								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
-								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/XHRyXHM"
-								target="_blank">@reiwa_girls_Line</a></li>
-						<li>ライバータレント：<a href="https://nextstars-tiktok.github.io/ReiwaGirls/"
-								target="_blank">@reiwa_girls_talents</a></li>
+					<ul class="service__link-list">
+						<li class="service__link-item">
+							<img src="img_logo/instagram_logo.png" alt="Instagramロゴ" class="service__icon" />
+							<a href="https://www.instagram.com/reiwa_girls_official/"
+								class="service__link service__link--insta" target="_blank">
+								公式Instagramはこちら
+							</a>
+						</li>
+						<li class="service__link-item">
+							<img src="img_logo/line_logo.png" alt="LINEロゴ" class="service__icon" />
+							<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								class="service__link service__link--line" target="_blank">
+								公式LINEはこちら
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -412,7 +436,7 @@
 						コンセプト・ロゴ・イメージカラーなど理想を形にするために、弊社の専門スタッフと一緒に制作し、登録する10,000人以上のインフルエンサーにPRを依頼し、ECサイトで販売していくサービスです。
 						ECサイト制作から商品発注、発送など一連の作業のすべてを弊社が請け負うため、経験や知識がない方でも1からアクセサリーブランドを立ち上げることができます。
 					</p>
-					<img src="img/.jpg" class="votrebijou-service-flow">
+					<!--					<img src="img/.jpg" class="votrebijou-service-flow">-->
 
 					<p>
 						ブランドコンセプト・ロゴ制作から、ECサイト制作・販売、プロモーションまで<br>
@@ -436,7 +460,7 @@
 
 					<h3>インフルエンサーによるPR支援</h3>
 
-					<img src="img/.jpg" class="votrebijou-service-merit">
+					<!--					<img src="img/.jpg" class="votrebijou-service-merit">-->
 
 					<p>
 						立ち上げたブランドは、<strong>約10,000名のインフルエンサーが無償でPRサポート</strong>。<br>
@@ -452,21 +476,34 @@
 
 					<h3>詳細・お申し込み</h3>
 
-					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
-							target="_blank"><strong>株式会社令和ガールズ公式LINE＠はこちら</strong></a></p>
+					<p>
+						<a href="https://page.line.me/fhy3551i?openQrModal=true"
+							class="service__button service__button--line" target="_blank">
+							公式LINE＠はこちら
+						</a>
+					</p>
 
 					<hr>
 
 					<h3>株式会社令和ガールズ 概要</h3>
 
-					<ul>
-						<li>公式Instagram：<a
-								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
-								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
-								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a>
+					<ul class="service__link-list">
+						<li class="service__link-item">
+							<img src="img_logo/instagram_logo.png" alt="Instagramロゴ" class="service__icon" />
+							<a href="https://www.instagram.com/reiwa_girls_official/"
+								class="service__link service__link--insta" target="_blank">
+								公式Instagramはこちら
+							</a>
+						</li>
+						<li class="service__link-item">
+							<img src="img_logo/line_logo.png" alt="LINEロゴ" class="service__icon" />
+							<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								class="service__link service__link--line" target="_blank">
+								公式LINEはこちら
+							</a>
 						</li>
 					</ul>
+
 
 				</div>
 			</div>
@@ -490,7 +527,7 @@
 
 					<p>ブランドの立ち上げが決定すると、専門スタッフがマネージャーとして伴走し、コンセプト・ロゴ・イメージカラーなどを理想通りに形にしていきます。</p>
 
-					<img src="img/monmaisonFlow.jpg" class="votrebijou-service-flow">
+					<!--					<img src="img/monmaisonFlow.jpg" class="votrebijou-service-flow">-->
 
 					<p>さらに、<strong>ECサイト制作・アパレル発注・商品の発送まで</strong>、ブランド運営に必要なすべての工程を令和ガールズが請け負うため、経験や知識がない方でも1からアパレルブランドを立ち上げることが可能です。
 					</p>
@@ -511,7 +548,7 @@
 
 					<h3>提供サービス・料金プラン</h3>
 
-					<img src="img/.jpg" class="monmaisonPriceList">
+					<!--					<img src="img/.jpg" class="monmaisonPriceList">-->
 
 					<p>ブランドの企画から構築・販売・物流まで、すべてをワンストップで対応可能。<br>
 						アパレルブランド立ち上げに必要な作業を、完全サポートいたします。</p>
@@ -519,20 +556,32 @@
 					<hr>
 
 					<h3>詳細・お申し込み</h3>
-
-					<p><a href="https://lin.ee/BNNecfR" target="_blank">
-							<strong>株式会社令和ガールズ公式LINE＠はこちら</strong></a></p>
-
-					<hr>
+					<p>
+						<a href="https://page.line.me/fhy3551i?openQrModal=true"
+							class="service__button service__button--line" target="_blank">
+							公式LINE＠はこちら
+						</a>
+					</p>
 
 					<hr>
 
 					<h3>株式会社令和ガールズ 概要</h3>
 
-					<ul>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
-								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a></li>
+					<ul class="service__link-list">
+						<li class="service__link-item">
+							<img src="img_logo/instagram_logo.png" alt="Instagramロゴ" class="service__icon" />
+							<a href="https://www.instagram.com/reiwa_girls_official/"
+								class="service__link service__link--insta" target="_blank">
+								公式Instagramはこちら
+							</a>
+						</li>
+						<li class="service__link-item">
+							<img src="img_logo/line_logo.png" alt="LINEロゴ" class="service__icon" />
+							<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								class="service__link service__link--line" target="_blank">
+								公式LINEはこちら
+							</a>
+						</li>
 					</ul>
 
 				</div>
@@ -596,20 +645,33 @@
 					<hr>
 
 					<h3>お問い合わせ・詳細</h3>
-					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
-							target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+					<p>
+						<a href="https://page.line.me/fhy3551i?openQrModal=true"
+							class="service__button service__button--line" target="_blank">
+							公式LINE＠はこちら
+						</a>
+					</p>
 
 					<h3>株式会社令和ガールズ 概要</h3>
-					<ul>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
-								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
-								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a></li>
+					<ul class="service__link-list">
+						<li class="service__link-item">
+							<img src="img_logo/instagram_logo.png" alt="Instagramロゴ" class="service__icon" />
+							<a href="https://www.instagram.com/reiwa_girls_official/"
+								class="service__link service__link--insta" target="_blank">
+								公式Instagramはこちら
+							</a>
+						</li>
+						<li class="service__link-item">
+							<img src="img_logo/line_logo.png" alt="LINEロゴ" class="service__icon" />
+							<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								class="service__link service__link--line" target="_blank">
+								公式LINEはこちら
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
 
-			<!-- モーダル(インフルエンサーマーケティング) -->
 			<!-- モーダル(インフルエンサーマーケティング) -->
 			<div id="popupModelProduceModal" class="modal-ModelProduce">
 				<div class="modal-influencehub-content">
@@ -661,18 +723,32 @@
 					<h3>お問い合わせ・ご相談</h3>
 					<p>
 						商材や目的に合わせた最適なプロモーションプランをご提案します。<br>
+
 						<a href="https://page.line.me/fhy3551i?openQrModal=true"
-							target="_blank"><strong>株式会社令和ガールズ公式LINE＠はこちら</strong></a>
+							class="service__button service__button--line" target="_blank">
+							公式LINE＠はこちら
+						</a>
+
 					</p>
 
 					<hr>
 
 					<h3>株式会社令和ガールズ 概要</h3>
-					<ul>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
-								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
-								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a></li>
+					<ul class="service__link-list">
+						<li class="service__link-item">
+							<img src="img_logo/instagram_logo.png" alt="Instagramロゴ" class="service__icon" />
+							<a href="https://www.instagram.com/reiwa_girls_official/"
+								class="service__link service__link--insta" target="_blank">
+								公式Instagramはこちら
+							</a>
+						</li>
+						<li class="service__link-item">
+							<img src="img_logo/line_logo.png" alt="LINEロゴ" class="service__icon" />
+							<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								class="service__link service__link--line" target="_blank">
+								公式LINEはこちら
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
