サービスページの画像・デザイン修正（2025/06/24）

--- a/service.html
+++ b/service.html
@@ -171,10 +171,11 @@
 			<h2 class="service-title">事業・サービス一覧</h2>
 			<div class="card-grid">
 				<div class="card">
-					<h3>インフルエンサー支援</h3>
+					<h3>インフルエンスハブ</h3>
 					<img src="img_logo/InfluenceHubLogo.jpg" alt="インフルエンスハブ">
-					<p class="card-grid__catchcopy">共感と届く影響力のチカラ</p>
-					<p class="card-grid__text">媒体力と拡散力を活かし、インフルエンサーの影響力を高めるマーケティング・ブランディング支援。</p>
+					<p class="card-grid__catchcopy">1万人のインフルエンサーと起業できるサービス</p>
+					<p class="card-grid__text">
+						株式会社令和ガールズに登録している1万人以上のインフルエンサーの総フォロワー1億2000万人以上のフォロワーをターゲットに、影響力を用いて、起業することが可能です。</p>
 					<div class="detail-button__container">
 						<button id="openInfluenceHubModal" class="service-detail__button">詳細を見る</button>
 					</div>
@@ -182,8 +183,8 @@
 				<div class="card">
 					<h3>ライバー支援</h3>
 					<img src="img_logo/NexrStarsLogo.jpg" alt="NextStars">
-					<p class="card-grid__catchcopy">個性が光る、ライブ戦略</p>
-					<p class="card-grid__text">“あなた”にしかない個性で、ライブ配信での存在感を育てるプロデュース&マネージメントプログラム。</p>
+					<p class="card-grid__catchcopy"><br>個性が光る、ライブ戦略<br></p>
+					<p class="card-grid__text"><br>“あなた”にしかない個性で、ライブ配信での存在感を育てるプロデュース&マネージメントプログラム。<br></p>
 					<div class="detail-button__container">
 						<button id="openNextStarsModal" class="service-detail__button">詳細はこちら</button>
 						<!--						<a class="service-detail__button"-->
@@ -223,8 +224,8 @@
 				</div>
 				<!-- サービスカード(モデルプロデュース) -->
 				<div class="card">
-					<h3>インフルエンサー<br>マーケティング</h3>
-					<img src="img_backTalent/influencer-marketing.png" alt="Influencer Marketing">
+					<h3 class="influenser-marketing__title">インフルエンサーマーケティング</h3>
+					<img src="img/influencer_marketing_logo.jpg" alt="Influencer Marketing">
 					<p class="card-grid__catchcopy">“届けたい”を届ける<br>最強SNSプロモーション</p>
 					<p class="card-grid__text">
 						インフルエンサー10,000名超が登録。<br>
@@ -248,7 +249,7 @@
 					<!-- トップ画像 -->
 					<img src="img_logo/InfluenceHubLogo.jpg" alt="インフルエンスハブ概要" class="modal-influencehub-image">
 
-					<h2>1万人超の影響力を、ビジネスに。<br>【Influence Hub】</h2>
+					<h2>登録している1万人声のインフルエンサーとビジネスを作ろう<br>【Influence Hub】</h2>
 
 					<p>
 						総フォロワー数1億人を超えるインフルエンサーが所属する、<br>
@@ -261,8 +262,7 @@
 					<h3>Influence Hubとは？</h3>
 
 					<p>
-						<strong>登録インフルエンサー10,000名</strong>を抱える業界最大手の株式会社令和ガールズが、
-						10,000名を超えるインフルエンサーの影響力を活用して自身の好きなビジネスモデルで起業ができるサービス。
+						登録している<strong>10,000名</strong>を超えるインフルエンサーの影響力を活用して、自身の好きなビジネスモデルが起業できるサービス
 					</p>
 
 					<p>
@@ -284,14 +284,16 @@
 
 
 					<!--					<h3>提供サービス・料金プラン</h3>-->
-					<img src="img/hub_price.jpg" alt="インフルエンサー実績" class="modal-influencehub-image">
+					<h3>インフルエンスハブから生まれた事業実績</h3>
 
 					<ul>
 						<li>インフルエンサーキャスティング</li>
-						<li>ライブ配信・タイアップ広告</li>
+						<li>ライブ配信事業</li>
+						<li>タイアップ広告</li>
 						<li>D2Cブランド立ち上げ支援</li>
 						<li>イベント集客・認知拡大施策</li>
 						<li>PR・ブランディングコンサルティング</li>
+						<li>SNS運用代行</li>
 					</ul>
 
 					<hr>
@@ -299,11 +301,30 @@
 					<h3>お問い合わせ・詳細</h3>
 
 					<p>
-						<a href="https://page.line.me/fhy3551i?openQrModal=true"
-							class="service__button service__button--line" target="_blank">
-							公式LINE＠はこちら
+						<a href="https://lin.ee/x9muKU8" class="service__button service__button--line" target="_blank">
+							インフルエンスハブ　公式LINE＠
 						</a>
 					</p>
+
+					<ul class="service__sns-list">
+						<li class="service__sns-item">
+							<a href="https://www.youtube.com/watch?v=LCu9slAL2kg"
+								class="service__sns-link service__sns-link--youtube" target="_blank">
+								YouTube
+							</a>
+						</li>
+						<li class="service__sns-item">
+							<a href="https://www.instagram.com/influencehub_official/"
+								class="service__sns-link service__sns-link--insta" target="_blank">
+								Instagram
+							</a>
+						</li>
+						<li class="service__sns-item">
+							<a href="#" class="service__sns-link service__sns-link--lp" target="_blank">
+								LP（Coming Soon）
+							</a>
+						</li>
+					</ul>
 
 					<h3>株式会社令和ガールズ 概要</h3>
 
