フッターセクションのCONTACTボタンをノーマルデザインに変更（2025/06/24）

--- a/service.html
+++ b/service.html
@@ -788,10 +788,11 @@
 					<a href="service.html" class="transition-link">SERVICE</a>
 					<a href="top.html" class="transition-link">VISION</a>
 					<a href="recruit.html" class="transition-link">RECRUIT</a>
+					<a href="contact.html" class="transition-link">CONTACT</a>
 				</div>
-				<div class="footer-contact">
-					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>
-				</div>
+<!--				<div class="footer-contact">-->
+<!--					<a href="contact.html" class="footer-contact-button transition-link">CONTACT</a>-->
+<!--				</div>-->
 			</div>
 
 			<div class="scroll-infinity">
