--- a/service.html
+++ b/service.html
@@ -249,7 +249,7 @@
 					<!-- トップ画像 -->
 					<img src="img_logo/InfluenceHubLogo.jpg" alt="インフルエンスハブ概要" class="modal-influencehub-image">
 
-					<h2>登録している1万人声のインフルエンサーとビジネスを作ろう<br>【Influence Hub】</h2>
+					<h2>登録している1万人超えのインフルエンサーとビジネスを作ろう<br>【Influence Hub】</h2>
 
 					<p>
 						総フォロワー数1億人を超えるインフルエンサーが所属する、<br>
