モバイル画面の背景動画不備修正修正（2025/06/28）

--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
 	</div>
 
 	<div class="video-background">
-		<video autoplay muted loop playsinline>
+		<video autoplay muted loop playsinline preload="auto">
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
 		</video>
 	</div>
