--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 	<section class="intro-section">
 		<div class="intro-content">
 			<div class="video-block scroll-rotate-left">
-				<video class="video-block_video" autoplay muted loop playsinline>
+				<video class="video-block_video" autoplay muted loop playsinline preload="auto">
 					<source
 						src="https://video.wixstatic.com/video/e769ce_280eeb91977c41b3be01ea5cbe00fd25/480p/mp4/file.mp4"
 						type="video/mp4">
