--- a/service.html
+++ b/service.html
@@ -123,7 +123,7 @@
 	</div>
 
 	<div class="video-background">
-		<video autoplay muted loop playsinline>
+		<video autoplay muted loop playsinline preload="auto">
 			<source src="video/令和ガールズ.mp4" type="video/mp4">
 		</video>
 	</div>
@@ -249,7 +249,7 @@
 					<!-- トップ画像 -->
 					<img src="img_logo/InfluenceHubLogo.jpg" alt="インフルエンスハブ概要" class="modal-influencehub-image">
 
-					<h2>登録している1万人超えのインフルエンサーとビジネスを作ろう<br>【Influence Hub】</h2>
+					<h2>登録している1万人のインフルエンサーとビジネスを作ろう<br>【Influence Hub】</h2>
 
 					<p>
 						総フォロワー数1億人を超えるインフルエンサーが所属する、<br>
