サービスページの画像・デザイン修正（2025/06/28）

--- a/service.html
+++ b/service.html
@@ -253,7 +253,7 @@
 
 					<p>
 						総フォロワー数1億人を超えるインフルエンサーが所属する、<br>
-						日本最大級のプラットフォームを自由に活用し、1万人以上のインフルエンサーを協業できるサービス「<strong>Influence Hub（インフルエンスハブ）</strong>」。<br>
+						日本最大級のプラットフォームを自由に活用し、1万人以上のインフルエンサーと協業できるサービス「<strong>Influence Hub（インフルエンスハブ）</strong>」。<br>
 						広告・マーケティングに必要な影響力を、あなたのビジネスに自由に活用できます。
 					</p>
 
@@ -262,7 +262,7 @@
 					<h3>Influence Hubとは？</h3>
 
 					<p>
-						登録している<strong>10,000名</strong>を超えるインフルエンサーの影響力を活用して、自身の好きなビジネスモデルが起業できるサービス
+						登録している<strong>10,000名</strong>を超えるインフルエンサーの影響力を活用して、自身の好きなビジネスモデルが起業できるサービス。
 					</p>
 
 					<p>
@@ -287,7 +287,7 @@
 					<h3>インフルエンスハブから生まれた事業実績</h3>
 
 					<ul>
-						<li>インフルエンサーキャスティング</li>
+						<li>インフルエンサーキャスティング事業</li>
 						<li>ライブ配信事業</li>
 						<li>タイアップ広告</li>
 						<li>D2Cブランド立ち上げ支援</li>
